--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,23 +1,38 @@
 <h1>記事</h1>
+
 <%= link_to "新規作成", new_article_path %>
 <%= link_to "コメント一覧", comments_path %>
 <%= link_to "お気に入り記事一覧", favorites_path%>
-  <hr/>
-<% @articles.each do |article| %>
-  <p><%= article.created_at %></p>
-  <% author = article.user %>
-  <% if author.has_photo %>
-    <img src="/uploads/<%= author.id %>.jpg" width="40px"/>
-  <% else %>
-    <img src="/no_photo.jpg" width="40px"/>
-  <% end %>
 
-  <%= link_to author.name, user_path(author.id) %>
-  <h2><%= article.title %></h2>
-  <p><%= article.body %></p>
-  <%= link_to "削除", article_path(article.id), method: :delete %>
-  <%= link_to "更新", edit_article_path(article.id) %>
-  <%= link_to "詳細", article_path(article.id) %>
+<hr/>
+
+<div id="post_form">
+  <input id="title" type="text" name="title" style="width: 500px; height: 30px;" placeholder="タイトル"/><br/>
+  <textarea id="body" name="body" style="width: 500px; height: 120px;"></textarea><br/>
+  <input id="submit" type="submit" value="送信" />
+</div>
+
+<div id="articles">
+  <!-- <% @articles.each do |article| %> -->
+  <!-- <div class="article"> -->
+    <!-- <p><%= article.created_at %></p>
+
+    <% author = article.user %>
+
+    <% if author.has_photo %>
+      <img src="/uploads/<%= author.id %>.jpg" width="40px"/>
+    <% else %>
+      <img src="/no_photo.jpg" width="40px"/>
+    <% end %>
+
+    <%= link_to author.name, user_path(author.id) %>
+    <h2><%= article.title %></h2>
+    <p><%= article.body %></p>
+
     <hr/>
-<% end %>
- 
+    <%= link_to "削除", article_path(article.id), method: :delete %>
+    <%= link_to "更新", edit_article_path(article.id) %>
+    <%= link_to "詳細", article_path(article.id) %> -->
+  <!-- </div> -->
+  <!-- <% end %> -->
+</div>
